Fixed border on small screens.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -565,7 +565,7 @@ header.blog-header .btn-red {
   max-width: 90%;
   margin: 2.5em auto;
   text-align: justify;
-  box-shadow: 0px 2px 2px 0px rgba(51, 51, 51, 0.39);
+  box-shadow: none;
 }
 
 .blog-post__heading {
@@ -891,6 +891,7 @@ section.contact button:hover {
     max-width: 40%;
     margin: 0 auto;
     padding: 0 5em;
+    box-shadow: 0px 2px 2px 0px rgba(51, 51, 51, 0.39);
   }
 
   .blog-post > * {
